@@ -1,3 +1,7 @@
+2012-03-28  Franz Holzinger  <franz@ttproducts.de>
+	* new feature: parameter STARTFILE to limit the debug output generation to index.php or ajax.php
+	* convert the output into UTF-8
+
 2012-03-07  Franz Holzinger  <franz@ttproducts.de>
 
 	* bug fix: not fitting ip addresses shall not overwrite the debug file
